# file_cms_app

./: README.md  app.py  pyproject.toml
cms/: users.yml
cms/data/: about.md  changes.txt  history.txt
files/: utils.py
static/stylesheets/: application.css
templates/: create_file.html  edit_file.html  file.html  files.html  layout.html  sign_in.html
tests/: test_app.py
