[tool.poetry]
name = "file-cms-app"
version = "0.1.0"
description = ""
authors = ["Seth Roberts <sethknock@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^23.0.0"
markdown ="^3.8"
pyyaml = "^6.0.2"
bcrypt = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
